<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QwikXL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cart_sqlite">Cart_sqlite</string>
    <string name="user">User Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_login">Login</string>
    <string name="new_user">New User..</string>
    <string name="title_activity_proceed">Proceed</string>
    <string name="title_activity_registration">Registration</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Id</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="re_password">Re Enter Password</string>
    <string name="register">Register</string>
    <string name="title_activity_my_account">My_account</string>
    <string name="title_activity_alert_popup">Alert_popup</string>
    <string name="title_activity_home_login">Home_login</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="title_activity_history">History</string>
    <string name="history">History</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="card_no">Card No</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cardholder_name">Card Holder Name</string>
    <string name="paynow">Pay Now</string>
    <string name="total">Total Amount :</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="connection_type">No Internet, Please Connect..</string>
    <string name="forgot_pass">Forgot Password..?</string>
    <string name="user_id">Enter your User Name</string>
    <string name="where">Where Are You?</string>
    <string name="skip">Skip the lines,Skip the wait</string>
    <string name="REGISTER">REGISTER</string>
    <string name="FIRST_NAME">FIRST NAME</string>
    <string name="LAST_NAME">LAST NAME</string>
    <string name="EMAIL">EMAIL</string>
    <string name="MOBILE">MOBILE</string>
    <string name="NEXT">NEXT</string>
    <string name="Bycreating">BY CREATING A QUICKEXPRESS ACCOUNT,YOU AGREE TO OUR</string>
    <string name="PAYMENT">PAYMENT</string>
    <string name="PROFILE">PROFILE</string>
    <string name="CANCEL">CANCEL</string>

    <string-array name="months">
        <item>MM</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>YYYY</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string name="title_activity_oder_status">Oder_status</string>
    <string name="title_activity_order_history">Order_history</string>
    <string name="title_activity_reward_point">Reward_point</string>
    <string name="title_activity_order_id">Order_id</string>
    <string name="title_activity_google">google</string>

    <color name="white">#ffffff</color>
    <color name="green">#2c835b</color>
    <color name="light_hash">#555555</color>
    <color name="verylight_hash">#ffbcbcbc</color>
    <color name="dark_hash">#403f41</color>
    <color name="hash">#37403f41</color>
    <color name="dark_blue">#fb021229</color>
    <color name="light_blue">#1bbc9b</color>
    <color name="black">#000000</color>
    <color name="red">#EA080B</color>
    <color name="light_red">#FF080E</color>
    <color name="dhash">#7e403f41</color>
    <color name="dialog_background_color">#00000000</color>

    <string name="title_activity_forgot_password">Forgot_password</string>
    <string name="title_activity_registration_two">Registration_two</string>
    <string name="title_activity_edit_profile">Edit_profile</string>
    <string name="title_activity_edit_creditcard">Edit_creditcard</string>
    <string name="title_activity_change_password">Change_password</string>
    <string name="title_activity_payment_option">Payment_option</string>
    <string name="title_activity_testing_customlist">Testing_customlist</string>
    <string name="title_activity_sub_category">Sub_category</string>

</resources>
