<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/logo_new" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/green">

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:background="@drawable/neww"
        android:gravity="center"
        android:orientation="vertical">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingBottom="25dp"
            android:paddingTop="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:inputType="textEmailAddress"
                android:textColor="@color/light_hash"
                android:textSize="18dp"
                android:text=""
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true"
                android:background="@color/white"
                android:gravity="center"
                android:text=""
                android:password="true"
                android:textColor="@color/light_hash"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/red"
                android:text="@string/login"

                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/new_user"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>
</ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/green">

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:background="@color/white">

    </LinearLayout>

</LinearLayout>
