<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/hash"
        android:gravity="left|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDIT PROFILE"
            android:textColor="@color/dark_hash"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/account_back">

                <ImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/account_pic" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:paddingLeft="0dp"
                    android:text="@string/FIRST_NAME"
                    android:textColor="@color/light_hash"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/f_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:weightSum="2">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LAST_NAME"
                    android:textColor="@color/light_hash"
                    android:textSize="18sp"
                    android:textStyle="bold" />



                <EditText
                    android:id="@+id/l_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:text="@string/EMAIL"
                android:textColor="@color/light_hash"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:paddingLeft="0dp"
                android:text="@string/MOBILE"
                android:textColor="@color/light_hash"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/sp_country"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".5"
                    android:background="@drawable/myrect_new"
                    android:paddingLeft="10dp"
                    android:textColor="@color/light_hash"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:hint="Enter Address"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/update"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_blue"
                android:text="UPDATE"
                android:textColor="@color/white"
                android:textStyle="bold"

                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
